Fixed alignment

--- a/themes/experience-engine/assets/styles/components/episode/episode-tile.css
+++ b/themes/experience-engine/assets/styles/components/episode/episode-tile.css
@@ -1,5 +1,5 @@
 .episode-tile {
-	align-items: center;
+	align-items: flex-start;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
