--- a/themes/experience-engine/assets/styles/components/player/range-slider.css
+++ b/themes/experience-engine/assets/styles/components/player/range-slider.css
@@ -23,7 +23,6 @@
       border-radius: 50px;
       cursor: pointer;
       height: 11px;
-      margin-top: -4.5px;
       width: 11px;
     }
 
